<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyBluetoothTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="change">Change Name</string>
    <string name="compare">Compare Name</string>
    <string name="input">Input ID</string>
    <string name="Visible">Get Visible</string>
    <string name="List">List Paired Devices</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="stu_id">Your ID: Please press Input ID to enter</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="choose_role">Please choose Your role</string>
    <string name="Student">Student</string>
    <string name="Teacher">Teacher</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="tea_hello">Hello, teacher!</string>
    <string name="list_All">Scan available devices</string>
    <string name="shower_stop">stop scan</string>
    <string name="shower_not_bind">not bind yet</string>

</resources>
