<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/choose_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_role" />

    <Button
        android:id="@+id/button_stu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="skip_Student"
        android:text="@string/Student" />

    <Button
        android:id="@+id/button_tea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="skip_Teacher"
        android:text="@string/Teacher" />
</LinearLayout>